test-data/negative/missing_end_semicolon.aadl
-- ERROR: Missing semicolon after 'end Name'
package missing_end_semicolon
public
end missing_end_semicolon
